<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuScreen.Settings.EmergencyContact">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?background"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:src="@drawable/header"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"/>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/nunito_sans"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="E-Konsultasyon"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mon-Wed-Fri (9AM - 3PM)"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans"/>
            <TextView
                android:id="@+id/link1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans"
                android:autoLink="web"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NCMH CONTACTS:"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/nunito_sans"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ncmh_crisis_hotlines"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cellphone_lines"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outpatient_adult_services"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans"/>

            <TextView
                android:id="@+id/link2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/online_registration"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans"
                android:autoLink="web"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outpatient_child_and_adolescent_services"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/women_and_child_protection_unit"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_wcpu_ncmh_gov_ph"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forensic_unit"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_sans"/>






        </LinearLayout>


    </ScrollView>

</LinearLayout>