<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuScreen.AboutApp">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/melrose"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="About Mental Help"
                android:fontFamily="@font/nunito_sans"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/intro"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:gravity="fill"
                android:textSize="16sp"
                android:lineSpacingExtra="8dp"
                android:fontFamily="@font/nunito_sans"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/open_book" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hidden Blues"
                android:fontFamily="@font/nunito_sans"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hiddenBlues"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:gravity="fill"
                android:textSize="16sp"
                android:lineSpacingExtra="8dp"
                android:fontFamily="@font/nunito_sans"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/music_note" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Solitunes"
                android:fontFamily="@font/nunito_sans"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/solitunes"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:gravity="fill"
                android:textSize="16sp"
                android:lineSpacingExtra="8dp"
                android:fontFamily="@font/nunito_sans"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/user_guide" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wits' End"
                android:fontFamily="@font/nunito_sans"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/WitEnd"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:gravity="fill"
                android:textSize="16sp"
                android:lineSpacingExtra="8dp"
                android:fontFamily="@font/nunito_sans"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/fit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Happy Fit"
                android:fontFamily="@font/nunito_sans"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/HappyFit"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:gravity="fill"
                android:textSize="16sp"
                android:lineSpacingExtra="8dp"
                android:fontFamily="@font/nunito_sans"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>